tests/textual/error/lessThanEqualsInteger-bytestring-wrong-1st-argument.uplc
(program 1.0.0[[(builtin lessThanEqualsInteger)(con bytestring #AFD3)](con integer 10)])